--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -3,16 +3,10 @@
   "version": "1.0.0",
   "description": "Develope a sample app using angular1.5",
   "main": "index.js",
-  "scripts": {
-    "start": "concurrently \"npm run lite\" ",
-    "lite": "lite-server"
-  },
   "author": "maniish.kumar",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.5",
-    "angular-cache": "^4.6.0",
-    "concurrently": "^2.1.0",
-    "lite-server": "^2.2.0"
+    "angular-cache": "^4.6.0"
   }
 }
