--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "angular15",
+  "name": "chhsdemo",
   "version": "1.0.0",
-  "description": "Develope a sample app using angular1.5",
-  "main": "index.js",
-  "author": "maniish.kumar",
+  "description": "Develope a demo app for foster families",
+  "main": "appModule.js",
+  "author": "as-manish",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.5",
     "angular-cache": "^4.6.0"
   }
 }
+
