password error verified

--- a/src/main/resources/chhs_config.properties
+++ b/src/main/resources/chhs_config.properties
@@ -1,7 +1,7 @@
 #AgreeYa CHHS Local Server
 db.url = jdbc:mysql://14.141.136.106:3306/foster
 db.username = root
-db.password = root
+db.password = AgreeYa!@#$
 
 ## -- AgreeYa  local JMS Configuration
 activemq.brokerURL=tcp://localhost:61616
