--- a/src/main/resources/chhs_config.properties
+++ b/src/main/resources/chhs_config.properties
@@ -1,5 +1,5 @@
 #AgreeYa CHHS Local Server
-db.url = jdbc:mysql://209.118.218.61:3306/foster
+db.url = jdbc:mysql://localhost:3306/foster
 db.username = root
 db.password = AgreeYa!@#$
 
